--- a/IPMSpatialAnalysis/Properties/launchSettings.json
+++ b/IPMSpatialAnalysis/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
   "profiles": {
-    "IPMSpatialAnalysis": {
+    "Win Rhino 8 net48": {
       "commandName": "Executable",
       "executablePath": "C:\\Program Files\\Rhino 8\\System\\Rhino.exe",
-      "commandLineArgs": ""
+      "commandLineArgs": "/nosplash /netfx"
     }
   }
 }
