--- a/IPMSpatialAnalysis/IPMSpatialAnalysis.csproj
+++ b/IPMSpatialAnalysis/IPMSpatialAnalysis.csproj
@@ -13,5 +13,24 @@
     <PackageReference Include="Grasshopper" Version="8.9.24194.18121" IncludeAssets="compile;build" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
